Mass tails