@@ -1,12 +1,13 @@
 package ch.duckpond.universe.client;
 
-import ch.duckpond.universe.client.circlemenu.CircleMenu;
-import ch.duckpond.universe.shared.simulation.Globals;
 import com.badlogic.gdx.math.Vector3;
 import com.badlogic.gdx.utils.GdxRuntimeException;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.Deque;
+import java.util.LinkedList;
+
+import ch.duckpond.universe.client.circlemenu.CircleMenu;
+import ch.duckpond.universe.shared.simulation.Globals;
 
 /**
  * A mass in the game
@@ -15,9 +16,9 @@ import java.util.List;
  */
 public class Mass {
 
-    private Player owner;
     private final CircleMenu circleMenu = new CircleMenu(this);
-    private final List<Vector3> lastPositions = new ArrayList<>(Globals.KEEP_LAST_POSITIONS_COUNT + 1);
+    private final Deque<Vector3> lastPositions = new LinkedList();
+    private Player owner;
 
     /**
      * Mass owned by the local player
@@ -37,11 +38,17 @@ public class Mass {
         return owner;
     }
 
-    public Vector3[] getLastPositions() {
-        if (lastPositions.size() <= 0) {
-            return new Vector3[0];
+    public void setOwner(final Player owner) {
+        if (owner == null) {
+            throw new GdxRuntimeException("Owner == null");
         }
-        return (Vector3[]) lastPositions.toArray();
+        this.owner = owner;
+    }
+
+    public Vector3[] getLastPositions() {
+        final Vector3[] returnLastPositions = new Vector3[lastPositions.size()];
+        lastPositions.toArray(returnLastPositions);
+        return returnLastPositions;
     }
 
     /**
@@ -50,16 +57,12 @@ public class Mass {
      * @param lastPosition position in world coordinates
      */
     public void addLastPosition(final Vector3 lastPosition) {
-        lastPositions.add(lastPosition);
+        if (lastPosition == null) {
+            throw new GdxRuntimeException("lastPosition == null");
+        }
+        lastPositions.addFirst(lastPosition);
         if (lastPositions.size() > Globals.KEEP_LAST_POSITIONS_COUNT) {
-            lastPositions.remove(0);
+            lastPositions.removeLast();
         }
-    }
-
-    public void setOwner(Player owner) {
-        if (owner == null) {
-            throw new GdxRuntimeException("Owner == null");
-        }
-        this.owner = owner;
     }
 }
